# pip_template

./: README.md  licence.txt  setup.cfg
src/pip_experiment/: default_file.py
